# casebook

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
.qwen/: settings.json
casebook/: AGENTS.md  README.md  config.yml
casebook/tests/desktop/dashboard/: case-detail.md  stats-sidebar.md
casebook/tests/desktop/parsing/: invalid-frontmatter-yaml.md  missing-expected-section.md  missing-frontmatter-title.md  path-fallback-case.md  valid-markdown-case.md
casebook/tests/desktop/scan/: initial-idle-state.md  load-project-with-casebook-tests.md  missing-tests-directory.md  rescan-selected-project.md
casebook/tests/desktop/states/: filesystem-fallback.md  git-timestamp-preferred.md  ignore-me.txt  scan-warning-reference.md  stats-summary.md
casebook/tests/desktop/states/nested/: deep-valid-case.md
casebook/tests/desktop/tree-view/: expand-collapse.md
src/: App.vue  globals.d.ts  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: App.tsx  CaseTreeNode.tsx  CaseTreeNode.vue
src/contexts/: AppContext.tsx
src/i18n/: index.ts  messages.ts
src/lib/: appVersion.ts  casebook.ts  tree.ts
