[package]
name = "casebook"
version = "0.2.4"
description = "A local test case manager for Markdown-native QA assets"
authors = ["Casebook"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "casebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2"
notify = "7"
